tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/serverfirst/auto-tcp-server:DISABLE/PERMISSIVE/_test_context/DestinationRule-PeerAuthentication.1972537490.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-60257
spec:
  host: c
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-60257
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: c
